# Learning

design/: CMakeLists.txt  readme.txt
design/adapter/: CMakeLists.txt  adapter.h  main.cpp
design/bridge/: CMakeLists.txt  main.cpp
design/builder/: CMakeLists.txt  Makefile  builder  builder.cpp  builder.h  director.h  main.cpp  netData.h  product.cpp  product.h
design/command/: CMakeLists.txt  Makefile  cmd  main.cpp
design/decorator/: CMakeLists.txt  main.cpp
design/facade/: CMakeLists.txt
design/factory/: CMakeLists.txt  Makefile  readme.txt
design/observer/: CMakeLists.txt  event.cpp  event.h
design/singleton/: singleton.h
